Update layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ figure {
     width: 100%; }
     @media screen and (max-width: 768px) {
       #colorlib-aside .colorlib-footer {
-        position: relative;
+        position: absolute;
         bottom: 0; } }
     #colorlib-aside .colorlib-footer span {
       display: block; }
